@@ -20,6 +20,6 @@
 # Clean up after zone transfer tests.
 #
 
-rm -f dig.out
+rm -f dig.out.*
 rm -f ns2/example.db ns2/tsigzone.db ns2/example.db.jnl ns2/named.conf
 rm -f */named.memstats
